--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
         <canvas></canvas>
         
         <script src="main.js" async defer></script>
+        <script src="gl-matrix-min.js" async defer></script>
     </body>
 </html>
