--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>Hi From Scyruz</h1>
-        <canvas></canvas>
-        
-        <script src="main.js" async defer></script>
-        <script src="gl-matrix-min.js" async defer></script>
-    </body>
+	<head>
+		<title>Tennis ScyCourt</title>
+		<script type="text/javascript" src="three.min.js" ></script>
+		<script type="text/javascript" src="main.js" ></script>
+	</head>
+	<body style="text-align:center;">
+		
+	</body>
 </html>
