--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Tennis ScyCourt</title>
-		<script type="text/javascript" src="three.min.js" ></script>
+		<script type="text/javascript" src="three.js" ></script>
 		<script type="text/javascript" src="main.js" ></script>
+		<script type="text/javascript" src="GLTFLoader.js" ></script>
 	</head>
 	<body style="text-align:center;">
-		
 	</body>
 </html>
